<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        app:showAsAction="always"
        android:icon="@drawable/im_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView">
    </item>
    <item
        android:id="@+id/cart"
        app:showAsAction="always"
        android:title="@string/cart"
        android:icon="@drawable/im_cart"
        app:actionLayout="@layout/custom_menu_item">
    </item>
    <item
        android:id="@+id/log_out_button"
        app:showAsAction="never"
        android:icon="@drawable/im_logout"
        android:title="@string/log_out"
        android:orderInCategory="2">
    </item>
    <item
        android:id="@+id/settings_button"
        app:showAsAction="never"
        android:icon="@drawable/im_settings"
        android:title="@string/settings"
        android:orderInCategory="1">
    </item>
</menu>