<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".RegistrationActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:ems="10"
            android:gravity="center"
            android:text="@string/registration"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@dimen/default_bias" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/registerTextView"
            app:layout_constraintVertical_bias="@dimen/default_bias" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
            app:layout_constraintVertical_bias="@dimen/default_bias"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintVertical_bias="@dimen/default_bias"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/passwordConfirmEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintVertical_bias="@dimen/default_bias"
            tools:layout_editor_absoluteX="0dp" />

        <RadioGroup
            android:id="@+id/userTypeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEditText">

            <RadioButton
                android:id="@+id/buyerRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buyer"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller"/>
        </RadioGroup>

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:ems="10"
            android:gravity="left"
            android:text="@string/phone_type"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/userTypeRadioButton"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="@dimen/default_bias" />

        <Spinner
            android:id="@+id/phoneSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintStart_toEndOf="@+id/phoneTextView"
            app:layout_constraintTop_toBottomOf="@+id/userTypeRadioButton" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@+id/phoneSpinner"
            app:layout_constraintVertical_bias="@dimen/default_bias"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/address"
            android:maxLines="3"
            android:inputType="textPostalAddress|textMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
            app:layout_constraintVertical_bias="@dimen/default_bias" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:onClick="register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressEditText"
            app:layout_constraintVertical_bias="@dimen/default_bias" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@+id/registerButton"
            app:layout_constraintTop_toBottomOf="@+id/addressEditText"
            app:layout_constraintVertical_bias="@dimen/default_bias" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
